Fix code size on small screens

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -609,7 +609,7 @@ code {
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
-  font-size: 20px;
+  font-size: 1rem;
 }
 pre code {
   background: none;
